# NAML-Urban-Sound-Classification

./: LICENSE  README.md  augment_data.ipynb  cnn_modeling.py  cnn_modeling_with_augmented_data.py  jams_data_generator.py  jams_to_image_data_generator.py  model.py  preprocessing.py  pyproject.toml  train.py  train_with_augmentation.py  train_without_augmentation.py  utils.py
data/processed/: labels_y.npy
models/cnn_model_no_augmentation/: keras_metadata.pb  saved_model.pb
models/cnn_model_no_augmentation/variables/: variables.data-00000-of-00001  variables.index
