[tool.poetry]
name = "naml-urban-sound-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "naml_urban_sound_classification"}]

[tool.poetry.dependencies]
python = "3.10.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
tensorflow-macos = "^2.11.0"
llvmlite = "^0.39.1"
numba = "^0.56.4"
librosa = "^0.9.2"
seaborn = "^0.12.1"
jams = "^0.3.4"
jupyter = "^1.0.0"
muda = "^0.4.1"
soundfile = "^0.11.0"
tqdm = "^4.64.1"
black = "^22.12.0"
tensorflow-metal = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
